<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/txtTitle"
        android:textColor="#FF9800"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtDollars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/hint"
        android:inputType="number"
        android:textColorHint="#FF9800"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
        android:importantForAutofill="no" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="287dp"
        android:layout_height="101dp"
        android:layout_marginTop="15dp"
        android:checkedButton="@id/radEuros"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDollars">

        <RadioButton
            android:id="@+id/radEuros"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radEuros"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radPesos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radPesos"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radCanDollars"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radCanDollars"
            android:textSize="20sp" />
    </RadioGroup>

    <Button
        android:id="@+id/btnConvert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/btnConvert"
        android:textColor="#FF9800"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:gravity="center_horizontal"
        android:textColor="#FF9800"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConvert" />
</androidx.constraintlayout.widget.ConstraintLayout>